# cosmic-ext-config-templates

./: .gitmodules  CHANGELOG  Cargo.toml  README.md
base_templates/: windows10_panel.ron  windows_panel.ron
src/: generic.rs  lib.rs  panel.rs
src/imports/: cosmic_panel_button_config.rs  mod.rs
