[package]
name = "cosmic-ext-config-templates"
description = "Simple config template program for the COSMIC Desktop"
license = "GPL-3.0-only"
authors = [ "Ryan Brue <ryanbrue.dev@gmail.com>" ]
repository = "https://github.com/ryanabx/cosmic-ext-config-templates"
version = "2.0.0"
edition = "2021"

[[bin]]
name = "cosmic-ext-config-templates"
path = "src/bin/main.rs"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
ron = "0.8.1"
serde = { version = "1.0.213", features = ["derive"] }
walkdir = "2.5.0"
anyhow = "1.0.91"
log = "0.4.22"
env_logger = "0.11.5"

[dependencies.cosmic-panel-config]
git = "https://github.com/pop-os/cosmic-panel"

[dependencies.cosmic-config]
git = "https://github.com/pop-os/libcosmic.git"